fix navbar covering icon

--- a/src/components/Navbar/Nav.module.css
+++ b/src/components/Navbar/Nav.module.css
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 80px;
+  top: 120px;
   width: 260px;
   row-gap: 24px;
   right: -260px;
